--- a/volunteer/pom.xml
+++ b/volunteer/pom.xml
@@ -97,7 +97,24 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.83</version>
         </dependency>
-<!--        webSocket-->
+        <dependency>
+            <groupId>com.ibeetl</groupId>
+            <artifactId>beetl</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!--        webSocket-->
 
 
 
