--- a/volunteer/pom.xml
+++ b/volunteer/pom.xml
@@ -90,12 +90,12 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.10</version>
+            <version>3.12.0</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.83</version>
+            <version>2.0.32</version>
         </dependency>
         <dependency>
             <groupId>com.ibeetl</groupId>
@@ -115,6 +115,14 @@
         </dependency>
 
         <!--        webSocket-->
+
+        <!--分页插件-->
+        <!-- 分页插件 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.4.6</version>
+        </dependency>
 
 
 
